--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,7 @@ Source: python-xstatic-angular
 Section: python
 Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
-Uploaders: Julien Danjou <acid@debian.org>,
-           Thomas Goirand <zigo@debian.org>,
-           Mehdi Abaakouk <sileht@sileht.net>,
-           Gonéri Le Bouder <goneri@debian.org>
+Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9),
                python-all (>= 2.6.6-3~),
                python-setuptools,
@@ -19,7 +16,11 @@ Homepage: https://bitbucket.org/thesheep/xstatic-angular
 Package: python-xstatic-angular
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: libjs-angularjs (>= 1.2.16), libjs-angularjs (<< 1.2.17), ${misc:Depends}, ${python:Depends}
+Depends: libjs-angularjs (<< 1.2.17),
+         libjs-angularjs (>= 1.2.16),
+         python-xstatic,
+         ${misc:Depends},
+         ${python:Depends}
 Description: Angular JS XStatic support - Python 2.x
  XStatic is a packaging standard to package external (often 3rd party) static
  files as a Python package, so they are easily usable on all operating systems,
@@ -47,7 +48,11 @@ Description: Angular JS XStatic support - Python 2.x
 Package: python3-xstatic-angular
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: libjs-angularjs (>= 1.2.16), libjs-angularjs (<< 1.2.17), ${misc:Depends}, ${python3:Depends}
+Depends: libjs-angularjs (<< 1.2.17),
+         libjs-angularjs (>= 1.2.16),
+         python3-xstatic,
+         ${misc:Depends},
+         ${python3:Depends}
 Description: Angular JS XStatic support - Python 3.x
  XStatic is a packaging standard to package external (often 3rd party) static
  files as a Python package, so they are easily usable on all operating systems,
