--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,7 @@ override_dh_install:
 			--root $(CURDIR)/debian/python3-xstatic-angular; \
 	done
 	#rm -rf $(CURDIR)/debian/python*-xstatic-angular/usr/lib/python*/dist-packages/xstatic/pkg/angular/data
-	#rm -rf $(CURDIR)/debian/python*-xstatic-angular/usr/lib/python*/dist-packages/*.pth
+	rm -rf $(CURDIR)/debian/python*-xstatic-angular/usr/lib/python*/dist-packages/*.pth
 
 override_dh_clean:
 	dh_clean -O--buildsystem=python_distutils
