--- a/debian/control
+++ b/debian/control
@@ -4,20 +4,19 @@ Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9),
-               python-all (>= 2.6.6-3~),
+               dh-python,
+               python-all,
                python-setuptools,
                python3-all,
                python3-setuptools
-Standards-Version: 3.9.5
+Standards-Version: 3.9.6
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-xstatic-angular.git
 Vcs-Git: git://anonscm.debian.org/openstack/python-xstatic-angular.git
 Homepage: https://github.com/stackforge/xstatic-angular
 
 Package: python-xstatic-angular
 Architecture: all
-Pre-Depends: dpkg (>= 1.15.6~)
-Depends: libjs-angularjs (<< 1.3),
-         libjs-angularjs (>= 1.2),
+Depends: libjs-angularjs (>= 1.2),
          python-xstatic,
          ${misc:Depends},
          ${python:Depends}
@@ -47,9 +46,7 @@ Description: Angular JS XStatic support - Python 2.x
 
 Package: python3-xstatic-angular
 Architecture: all
-Pre-Depends: dpkg (>= 1.15.6~)
-Depends: libjs-angularjs (<< 1.3),
-         libjs-angularjs (>= 1.2),
+Depends: libjs-angularjs (>= 1.2),
          python3-xstatic,
          ${misc:Depends},
          ${python3:Depends}
