--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Build-Depends: debhelper (>= 9),
                python3-all,
                python3-setuptools
 Standards-Version: 3.9.6
-Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-xstatic-angular.git/
-Vcs-Git: https://anonscm.debian.org/git/openstack/python-xstatic-angular.git
+Vcs-Browser: https://git.openstack.org/cgit/openstack/deb-python-xstatic-angular?h=debian%2Fnewton
+Vcs-Git: https://git.openstack.org/openstack/deb-python-xstatic-angular -b debian/newton
 Homepage: https://github.com/stackforge/xstatic-angular
 
 Package: python-xstatic-angular
